[tool.poetry]
name = "Project name"
version = "0.1.0"
description = ""
authors = ["ayusummer233"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true